--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=JavaCourseForSale'
+      - 'POSTGRES_DB=JavaCourse'
       - 'POSTGRES_PASSWORD=secret'
       - 'POSTGRES_USER=postgres'
     ports:
